feat: enhance Movie entity with projections and specifications